--- a/ballot_box_android/BallotBox/app/src/main/res/values/strings.xml
+++ b/ballot_box_android/BallotBox/app/src/main/res/values/strings.xml
@@ -4,5 +4,10 @@
     <string name="app_name">BallotBox</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="login">Log In</string>
+    <string name="username">Username:</string>
+    <string name="password">Password:</string>
+    <string name="submit">Submit</string>
+
 
 </resources>
